--- a/src/components/shared/Catalog/Catalog.css
+++ b/src/components/shared/Catalog/Catalog.css
@@ -17,9 +17,10 @@ section #catalog {
   flex-wrap: wrap;
 }
 #listing li {
+  width: 300px;
   box-shadow: #000 0 0 10px;
   display: inline-block;
-  padding: 0.35rem;
+  padding: 0.75rem;
   border-radius: 12px;
   margin: 15px;
 }
@@ -43,5 +44,12 @@ section #catalog {
   display: flex;
   width: 100%;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: right;
+  text-align: right;
 }
+
+#listing a {
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+}
+
