--- a/src/components/feature/Add-Car/AddCar.css
+++ b/src/components/feature/Add-Car/AddCar.css
@@ -170,3 +170,9 @@
 .textAreaField .description {
   padding: 0 2.5rem
 }
+#errorUser {
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size:  38px;
+}
